# cookiecutter-gcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  all_possible_requirements.txt  config.yaml  cookiecutter.json  local_extensions.py  pyproject.toml  requirements.txt  semver.py  test_generation.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__project_slug}}/: .gitignore  CHANGELOG.md  README.md  pyproject.toml.jinja  requirements.txt.jinja  socket_client.py
{{cookiecutter.__project_slug}}/cookiecutter/: TODOs.md
{{cookiecutter.__project_slug}}/deployment/: .env.example  Dockerfile  Dockerfile-test.jinja  cloudbuild.yaml.jinja  clouddeploy.yaml.jinja  cloudtraffic.yaml  readme.md
{{cookiecutter.__project_slug}}/docs/: asyncapi.yaml  auth0.md
{{cookiecutter.__project_slug}}/src/: authentication.py.jinja2  event_handlers.py.jinja  graphql.py.jinja2  gui.py  main.py.jinja  readme.md  routes.py.jinja
{{cookiecutter.__project_slug}}/src/config/: __init__.py  database.py.jinja  env_settings.py.jinja  fake_jwks.py  local.py  project_settings.py  routing.py.jinja2  sockets.py  templates.py.jinja
{{cookiecutter.__project_slug}}/src/templates/: example.html  wsdocs.html.jinja
{{cookiecutter.__project_slug}}/src/templates/partials/: head.html  topbar.html
{{cookiecutter.__project_slug}}/tests/: __init__.py  additional_documents.py  additional_routes.py  conftest.py.jinja  test_authentication.py  test_database.py.jinja2  test_formatting.py  test_graphql_query.py.jinja2  test_pubsub.py  test_settings.py  test_sockets.py.jinja
